--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,4 +17,15 @@
     <a routerLink="/login" class="btn btn-success">Login</a>
   </div>
 </nav>
-<router-outlet></router-outlet>
+
+<div class="main-body">
+  <router-outlet></router-outlet>
+</div>
+
+<footer class="footer">
+  <p>Copyright © 2021 COVID. All Rights Reserved</p>
+  <div>
+    <span>Privacy Policy</span>
+    <span>Terms of Service</span>
+  </div>
+</footer>
