home-page-design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
   </div>
   <div class="nav-2ndHead">
     <div>
-      <h1>Co-Aid</h1>
+      <h1>Cov-Aid</h1>
       <p>Winning Over Covid - 19</p>
     </div>
     <a routerLink="/login" class="btn btn-success">Login</a>
