--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,6 +1,34 @@
 <div class="help-line">
   <h3>Helpline</h3>
-  <div class="d-flex">
-    <i class="fa fa-home"></i>
+</div>
+<div class="homehelp">
+  <div class="helpattributes">
+    <div class="d-flex">
+      <i class="fas fa-phone-alt fa-2x"></i>
+    </div>
+   <h5>Number</h5> 
+    <div class="d-flex">
+      <i class="fas fa-heartbeat fa-2x"></i>
+    </div>
+    <h5>Health Ministry</h5>
+    <div class="d-flex">
+      <i class="fas fa-child fa-2x"></i>
+    </div>
+    <h5>Child</h5>
+    <div class="d-flex">
+      <i class="fas fa-procedures fa-2x"></i>
+    </div>
+    <h5>Mental Health</h5>
+    <div class="d-flex">
+      <i class="fas fa-male fa-2x"></i>
+    </div>
+    <h5>Senior Citizen</h5>
+  </div>
+  <div class="helplineno">
+    <h5>91-11-23978046</h5>
+    <h5>1075</h5>
+    <h5>1098</h5>
+    <h5>08046110007</h5>
+    <h5>14567</h5>
   </div>
 </div>
