--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,34 +1,58 @@
 <div class="help-line">
-  <h3>Helpline</h3>
-</div>
-<div class="homehelp">
-  <div class="helpattributes">
-    <div class="d-flex">
+  <h5>Helpline</h5>
+  <div class="homehelp">
+    <div class="help-inner">
       <i class="fas fa-phone-alt fa-2x"></i>
+      <div>
+        <h5>Number</h5>
+        <h5>91-11-23978046</h5>
+      </div>
     </div>
-   <h5>Number</h5> 
-    <div class="d-flex">
+    <div class="help-inner">
       <i class="fas fa-heartbeat fa-2x"></i>
+      <div>
+        <h5>Health Ministry</h5>
+        <h5>1075</h5>
+      </div>
     </div>
-    <h5>Health Ministry</h5>
-    <div class="d-flex">
+    <div class="help-inner">
       <i class="fas fa-child fa-2x"></i>
+      <div>
+        <h5>Child</h5>
+        <h5>1098</h5>
+      </div>
     </div>
-    <h5>Child</h5>
-    <div class="d-flex">
+    <div class="help-inner">
       <i class="fas fa-procedures fa-2x"></i>
+      <div>
+        <h5>Mental Health</h5>
+        <h5>08046110007</h5>
+      </div>
     </div>
-    <h5>Mental Health</h5>
-    <div class="d-flex">
+    <div class="help-inner">
       <i class="fas fa-male fa-2x"></i>
+      <div>
+        <h5>Senior Citizen</h5>
+        <h5>14567</h5>
+      </div>
     </div>
-    <h5>Senior Citizen</h5>
   </div>
-  <div class="helplineno">
-    <h5>91-11-23978046</h5>
-    <h5>1075</h5>
-    <h5>1098</h5>
-    <h5>08046110007</h5>
-    <h5>14567</h5>
+</div>
+
+<img
+  style="width: 100%"
+  src="../../assets/images/largest-vaccine-banner.jpg"
+  alt=""
+/>
+
+<div class="search-center">
+  <h5>Check your nearest vaccination center and slots availability</h5>
+  <!-- <h1>{{ "hi" + myname }}</h1>
+  <h2>{{ searchCenterOn ? "bsqw" : "jjeqe" }}</h2> -->
+  <div class="search-center-btns">
+    <button class="btn myname" (click)="onClick()">Search by PIN</button>
+    <button class="btn btn-center" (click)="onClick()">
+      Search by District
+    </button>
   </div>
 </div>
