--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -56,3 +56,38 @@
     </button>
   </div>
 </div>
+
+<div class="howitworks">
+  <h3>How It Works</h3>
+  <div class="insideworks">
+    <div class="worksinner">
+      <img src="../../assets/images/s1.svg" alt="" />
+      <div>
+        <h2>REGISTER YOURSELF</h2>
+        <p> Register using your Mobile no. or Aadhaar no. or any other Identity
+        docs..</p>
+      </div>
+    </div>
+    <div class="worksinner">
+      <img src="../../assets/images/s2.svg" alt="" />
+      <div>
+        <h2>CHOOSE VACCINE LOCATION</h2>
+        <p>Select your nearby Vaccine Center for vaccination</p>
+      </div>
+    </div>
+    <div class="worksinner">
+      <img src="../../assets/images/s3.svg" alt="" />
+      <div>
+        <h2>CONFIRM YOUR SLOT</h2>
+        <p>Book your slot to Get Vaccine</p>
+      </div>
+    </div>
+    <div class="worksinner">
+      <img src="../../assets/images/s4.png" alt="" />
+      <div>
+        <h2>ANY QUESTION?</h2>
+        <p>Please follow our Frequently asked questions</p>
+      </div>
+    </div>
+  </div>
+</div>
