--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -1,11 +1,11 @@
 .help-line {
-  background-color: #ffe8fd;
+  background-color: #deecff;
   padding-top: 10px;
 }
 
-.help-line h5 {
+.help-line h4 {
   text-align: center;
-  font-weight: 700;
+  font-weight: 800;
 }
 
 .homehelp {
@@ -21,6 +21,10 @@
 
 .help-inner i {
   margin-right: 10px;
+}
+
+.help-inner h5 {
+  font-weight: bold;
 }
 
 .search-center {
@@ -40,48 +44,68 @@
   border-radius: 40px;
 }
 
-.search-center-btns .btn {
+.btn-center-on,
+.btn-center-off {
   width: 168px;
   padding: 10px 20px;
   border-radius: 40px;
-}
-
-.btn-center {
-  background-color: blue;
-  color: #fff;
-}
-
-.myname {
-  background-color: aqua;
-}
-
-.howitworks{
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
   text-align: center;
-  background-color: hsl(45, 98%, 50%);
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  font-size: 1rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.btn-center-on {
+  color: #fff;
+  background-color: #001f60;
+}
+
+.btn-center-off {
+  color: #212529;
+  background-color: #fff;
+}
+
+.howitworks {
+  text-align: center;
+  background-color: #fdbc00;
   padding-top: 40px;
   padding-bottom: 30px;
 }
 
-.howitworks h3{
+.howitworks h3 {
   text-decoration: underline;
   padding-bottom: 30px;
 }
 
-.insideworks{
+.insideworks {
   display: flex;
   justify-content: center;
 }
 
-.worksinner img{
+.worksinner img {
   max-width: 100%;
-  height: 100px
+  height: 100px;
+  margin-bottom: 20px;
 }
 
-.worksinner h2{
+.worksinner h2 {
   font-weight: 700;
   font-size: medium;
 }
 
-.worksinner p{
+.worksinner p {
   text-align: center;
+  padding-right: 50px;
+  padding-left: 40px;
+  width: 340px;
 }
