--- a/src/app/search-district/search-district.component.html
+++ b/src/app/search-district/search-district.component.html
@@ -5,6 +5,18 @@
       <option value="">Chennai</option>
       <option value="">Delhi</option>
       <option value="">Mumbai</option>
+      <option value="">Punjab</option>
+      <option value="">Assam</option>
+      <option value="">Bihar</option>
+      <option value="">Arunachal pradesh</option>
+      <option value="">Goa</option>
+      <option value="">Gujrat</option>
+      <option value="">Himachal Pradesh</option>
+      <option value="">Kashmir</option>
+      <option value="">Karnataka</option>
+      <option value="">Kerala</option>
+      <option value="">Madhya Pradesh</option>
+      <option value="">Rajasthan</option>
       <option value="">West Bengal</option>
     </select>
     <i class="fas fa-sort-down"></i>
