--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,8 @@
       <h1>Cov-Aid</h1>
       <p>Winning Over Covid - 19</p>
     </div>
-    <a routerLink="/login" class="btn btn-success">Login / Register yourSelf</a>
+    <a routerLink="/login" class="btn btn-success">Login</a>
+    <a routerLink="/login" class="btn btn-success">Register</a>
   </div>
 </nav>
 
