--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,8 +14,10 @@
       <h1>Cov-Aid</h1>
       <p>Winning Over Covid - 19</p>
     </div>
-    <a routerLink="/login" class="btn btn-success">Login</a>
-    <a routerLink="/login" class="btn btn-success">Register</a>
+    <div>
+      <a routerLink="/login" class="btn btn-success">Login</a>
+      <a routerLink="/register" class="btn btn-success">Register</a>
+    </div>
   </div>
 </nav>
 
