--- a/src/app/search-district/search-district.component.html
+++ b/src/app/search-district/search-district.component.html
@@ -1,35 +1,38 @@
-<div [ngClass]="[searchData ? 'd-none' : 'search-dis']">
-  <div class="state">
-    <select class="form-control">
-      <option>Select State</option>
-      <option value="">Chennai</option>
-      <option value="">Delhi</option>
-      <option value="">Mumbai</option>
-      <option value="">Punjab</option>
-      <option value="">Assam</option>
-      <option value="">Bihar</option>
-      <option value="">Arunachal pradesh</option>
-      <option value="">Goa</option>
-      <option value="">Gujrat</option>
-      <option value="">Himachal Pradesh</option>
-      <option value="">Kashmir</option>
-      <option value="">Karnataka</option>
-      <option value="">Kerala</option>
-      <option value="">Madhya Pradesh</option>
-      <option value="">Rajasthan</option>
-      <option value="">West Bengal</option>
-    </select>
-    <i class="fas fa-sort-down"></i>
+<div *ngIf="!searchData">
+  <div class="search-dis">
+    <div class="state">
+      <select class="form-control">
+        <option>Select State</option>
+        <option value="">Arunachal pradesh</option>
+        <option value="">Assam</option>
+        <option value="">Bihar</option>
+        <option value="">Chennai</option>
+        <option value="">Delhi</option>
+        <option value="">Goa</option>
+        <option value="">Gujrat</option>
+        <option value="">Himachal Pradesh</option>
+        <option value="">Karnataka</option>
+        <option value="">Kashmir</option>
+        <option value="">Kerala</option>
+        <option value="">Madhya Pradesh</option>
+        <option value="">Mumbai</option>
+        <option value="">Punjab</option>
+        <option value="">Rajasthan</option>
+        <option value="">West Bengal</option>
+      </select>
+      <i class="fas fa-sort-down"></i>
+    </div>
+    <div class="state">
+      <select class="form-control">
+        <option>Select District</option>
+        <option value="">Hooghly</option>
+        <option value="">Howrah</option>
+        <option value="">Kolkata</option>
+        <option value="">North 24 Parganas</option>
+      </select>
+      <i class="fas fa-sort-down"></i>
+    </div>
+    <button class="btn" (click)="searchBtnClick()">Search</button>
   </div>
-  <div class="state">
-    <select class="form-control">
-      <option>Select District</option>
-      <option value="">Hooghly</option>
-      <option value="">Howrah</option>
-      <option value="">Kolkata</option>
-      <option value="">North 24 Parganas</option>
-    </select>
-    <i class="fas fa-sort-down"></i>
-  </div>
-  <button class="btn">Search</button>
+  <search-content [sContentData]="searchContent"></search-content>
 </div>
