--- a/src/app/search-pin/search-pin.component.html
+++ b/src/app/search-pin/search-pin.component.html
@@ -1,10 +1,13 @@
-<div [ngClass]="[searchData ? 'search-pin' : 'd-none']" class="">
-  <input
-    class="form-control"
-    type="search"
-    name=""
-    id=""
-    placeholder="Enter your PIN"
-  />
-  <button class="btn">Search</button>
+<div *ngIf="searchData">
+  <div class="search-pin">
+    <input
+      class="form-control"
+      type="search"
+      name=""
+      id=""
+      placeholder="Enter your PIN"
+    />
+    <button class="btn" (click)="searchBtnClick()">Search</button>
+  </div>
+  <search-content [sContentData]="searchContent"></search-content>
 </div>
