--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
       <p>Ministry of Health and Family Welfare</p>
     </div>
     <div class="nav-head-right">
-      <span class="faq">FAQ</span>
+      <!-- <span class="faq">FAQ</span> -->
+      <a routerLink="/faq" class="faq">FAQ</a>
       <span><i class="fas fa-phone-alt"></i> 1075</span>
     </div>
   </div>
