--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -1,5 +1,5 @@
 .help-line {
-  background-color: #deecff;
+  background-color: #ffffff;
   padding-top: 10px;
 }
 
@@ -67,7 +67,7 @@
 
 .btn-center-on {
   color: #fff;
-  background-color: #001f60;
+  background-color: #1abc9c;
 }
 
 .btn-center-off {
