--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -61,8 +61,8 @@
 .login-body .login-form .btn-otp {
   color: #fff;
   font-weight: bold;
-  background-color: #001f60;
-  border-color: #001f60;
+  background-color: #1abc9c;
+  border-color: #17af91;
   width: 100%;
   margin: 10px 0;
 }
