--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -3,13 +3,23 @@
   <div class="inside-faq">
     <div>
       <p>Registration</p>
+      <app-registration-com></app-registration-com>
     </div>
-
-    <li>Scheduling Appointment</li>
-    <li>2nd Dose Scheduling</li>
-    <li>Vaccination</li>
-    <li>Vaccinataion Certificate</li>
-    <li>Reporting Side Effects</li>
+    <div>
+      <p>Scheduling Appointment</p>
+    </div>
+    <div>
+      <p>2nd Dose Scheduling</p>
+    </div>
+    <div>
+      <p>Vaccination</p>
+    </div>
+    <div>
+      <p>Vaccinataion Certificate</p>
+    </div>
+    <div>
+      <p>Reporting Side Effects</p>
+    </div>
   </div>
   <!-- <button (click)="toggleDetails()">
     {{ showDetails ? "hide" : "show" }} Details
