--- a/src/app/registration-com/registration-com.component.html
+++ b/src/app/registration-com/registration-com.component.html
@@ -1,1 +1,8 @@
-<p>registration-com works!</p>
+<div class="registration-com">
+  <dl>
+    <dt>Coffee</dt>
+    <dd>Black hot drink</dd>
+    <dt>Milk</dt>
+    <dd>White cold drink</dd>
+  </dl>
+</div>
