--- a/src/app/search-district/search-district.component.html
+++ b/src/app/search-district/search-district.component.html
@@ -3,32 +3,36 @@
     <div class="state">
       <select class="form-control">
         <option>Select State</option>
-        <option value="">Arunachal pradesh</option>
-        <option value="">Assam</option>
-        <option value="">Bihar</option>
-        <option value="">Chennai</option>
-        <option value="">Delhi</option>
-        <option value="">Goa</option>
-        <option value="">Gujrat</option>
-        <option value="">Himachal Pradesh</option>
-        <option value="">Karnataka</option>
-        <option value="">Kashmir</option>
-        <option value="">Kerala</option>
-        <option value="">Madhya Pradesh</option>
-        <option value="">Mumbai</option>
-        <option value="">Punjab</option>
-        <option value="">Rajasthan</option>
-        <option value="">West Bengal</option>
+        <option value="" selected>West Bengal</option>
       </select>
       <i class="fas fa-sort-down"></i>
     </div>
     <div class="state">
       <select class="form-control">
         <option>Select District</option>
+        <option value="">Alipur Duar</option>
+        <option value="">Bankura</option>
+        <option value="">Birbhum</option>
+        <option value="">Cooch Behar</option>
+        <option value="">Dakshin Dinajpur</option>
+        <option value="">Darjeeling</option>
         <option value="">Hooghly</option>
         <option value="">Howrah</option>
+        <option value="">Jalpaiguri</option>
+        <option value="">Jhargarm</option>
+        <option value="">Kalimpong</option>
         <option value="">Kolkata</option>
+        <option value="">Malda</option>
+        <option value="">Mursidabad</option>
+        <option value="">Nadia</option>
         <option value="">North 24 Parganas</option>
+        <option value="">Pachim Medinipore</option>
+        <option value="">Pachim Bardhaman</option>
+        <option value="">Purba Bardhaman</option>
+        <option value="">Purba Medinipore</option>
+        <option value="">Purulia</option>
+        <option value="">South 24 Parganas</option>
+        <option value="">Uttar Dinajpur</option>
       </select>
       <i class="fas fa-sort-down"></i>
     </div>
