--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,27 +1,23 @@
 <div class="faqall">
-  <h2>Frequently Asked Questions on Co-WIN</h2>
+  <h2>Frequently Asked Questions on Cov-Aid</h2>
   <div class="inside-faq">
     <div>
       <p (click)="registerFaq = !registerFaq">A. Registration</p>
       <registration-com *ngIf="registerFaq"></registration-com>
     </div>
     <div>
-      <p>B. Scheduling Appointment</p>
+      <p (click)="schedulingFaq = !schedulingFaq">B. Scheduling Appointment</p>
+      <app-scheduling-com *ngIf="schedulingFaq"></app-scheduling-com>
     </div>
     <div>
-      <p>C. 2nd Dose Scheduling</p>
+      <p (click)="vaccinationFaq = !vaccinationFaq">C. Vaccination</p>
+      <app-vaccination-com *ngIf="vaccinationFaq"></app-vaccination-com>
     </div>
     <div>
-      <p>D. Vaccination</p>
+      <p>D. Vaccinataion Certificate</p>
     </div>
     <div>
-      <p>E. Vaccinataion Certificate</p>
-    </div>
-    <div>
-      <p>F. Reporting Side Effects</p>
+      <p>E. Reporting Side Effects</p>
     </div>
   </div>
-  <!-- <button (click)="toggleDetails()">
-    {{ showDetails ? "hide" : "show" }} Details
-  </button> -->
 </div>
