--- a/src/app/registration-com/registration-com.component.html
+++ b/src/app/registration-com/registration-com.component.html
@@ -1,8 +1,71 @@
 <div class="registration-com">
   <dl>
-    <dt>Coffee</dt>
-    <dd>Black hot drink</dd>
-    <dt>Milk</dt>
-    <dd>White cold drink</dd>
+    <dt>1. Where can I register for COVID-19 vaccination?</dt>
+    <dd>
+      You can log into the Co-WIN portal using the link www.cowin.gov.in and
+      click on the “Register/Sign In yourself” tab to register for COVID-19
+      vaccination
+    </dd>
+
+    <dt>
+      2. Is there a mobile app that needs to be installed to register for
+      vaccination?
+    </dt>
+    <dd>
+      There is no authorised mobile app for registering for vaccination in India
+      except Aarogya Setu. You need to log into the Co-WIN portal.
+      Alternatively, you can also register for vaccination through the Aarogya
+      Setu App and Umang app.
+    </dd>
+
+    <dt>3. Which age groups can register for vaccination on the Co-WIN portal?</dt>
+    <dd>All citizens aged 18 years and above can register for vaccination.</dd>
+
+    <dt>4. Is online registration mandatory for Covid 19 vaccination?</dt>
+    <dd>
+      Vaccination Centres provide for a limited number of on-spot registration
+      slots every day. Beneficiaries aged 45 years and above can schedule
+      appointments online or walk-in to vaccination centres. Beneficiaries aged
+      18 years and above can schedule appointments online or walk-in to
+      Government vaccination centres. However, beneficiaries aged 18-44 years
+      should mandatorily register themselves and schedule appointment online
+      before going to a Private vaccination centre. In general, all
+      beneficiaries are recommended to register online and schedule vaccination
+      in advance for a hassle-free vaccination experience.
+    </dd>
+
+    <dt>
+      5. How many people can be registered in the Co-WIN portal through one mobile
+      number?
+    </dt>
+    <dd>
+      Up to 4 people can be registered for vaccination using the same mobile
+      number.
+    </dd>
+
+    <dt>
+      6. How can beneficiaries with no access to smart phones or computers manage
+      online registration?
+    </dt>
+    <dd>
+      Up to 4 people can be registered for vaccination using the same mobile
+      number. Beneficiaries can take help from friends or family for online
+      registration.
+    </dd>
+
+    <dt>7. Can I register for vaccination without Aadhaar card?</dt>
+    <dd>
+      Yes, you can register on Co-WIN portal using any of the following ID
+      proofs:
+      <ul>
+        <li>Aadhaar card</li>
+        <li>Driving License</li>
+        <li>Passport</li>
+        <li>Voter ID (EPIC)</li>
+      </ul>
+    </dd>
+
+    <dt>8. Is there any registration charges to be paid?</dt>
+    <dd>No. There is no registration charge.</dd>
   </dl>
 </div>
