--- a/src/app/certificate-com/certificate-com.component.html
+++ b/src/app/certificate-com/certificate-com.component.html
@@ -1,6 +1,6 @@
 <div class="certificate-com">
   <dl>
-    <dt>27. Why do I need a vaccination certificate?</dt>
+    <dt>23. Why do I need a vaccination certificate?</dt>
     <dd>
       A COVID Vaccine Certificate (CVC) issued by the government offers an
       assurance to the beneficiary on the vaccination, type of vaccine used, and
@@ -11,16 +11,16 @@
       spreading the virus. Therefore, there could be a requirement in future to
       produce certificate for certain kind of social interactions and
       international travel. <br />
-      In this context the certificate issued by Co-WIN has built in security
+      In this context the certificate issued by Cov-Aid has built in security
       features to guarantee genuineness of the certificate which can be
-      digitally verified using approved utilities which are provided in Co-WIN
+      digitally verified using approved utilities which are provided in Cov-Aid
       portal.
     </dd>
-    <dt>28. Where can I download vaccination certificate from?</dt>
+    <dt>24. Where can I download vaccination certificate from?</dt>
     <dd>
       You can download vaccination certificate from the Cov-Aid portal by
-      following the simple steps. You may do so by using the mobile number used
-      at the time of registration.
+      following the simple steps. You may do so by using the E-mail ID used at
+      the time of registration.
     </dd>
   </dl>
 </div>
