--- a/src/app/vaccination-com/vaccination-com.component.html
+++ b/src/app/vaccination-com/vaccination-com.component.html
@@ -1,6 +1,6 @@
 <div class="vaccination-com">
   <dl>
-    <dt>24. Is vaccination free at all vaccination centres?</dt>
+    <dt>20. Is vaccination free at all vaccination centres?</dt>
     <dd>
       No. Currently, vaccination is free at Government hospitals and charged at
       INR 250 in Private hospitals for beneficiaries aged 45 years and above.
@@ -10,22 +10,22 @@
       Vaccination will be priced by private facilities and you can see the price
       of each vaccine at the time of booking.
     </dd>
-    <dt>25. Which documents should I carry with me for vaccination?</dt>
+    <dt>21. Which documents should I carry with me for vaccination?</dt>
     <dd>
       You should carry your identity proof specified by you at the time of
-      registration on the Co-WIN portal and a printout/screenshot of your
+      registration on the Cov-Aid portal and a printout/screenshot of your
       appointment slip.
     </dd>
     <dt>
-      26. I have registered myself on Cov-Aid portal. However, I am not able to
+      22. I have registered myself on Cov-Aid portal. However, I am not able to
       make any booking as I do not see any vaccination facility near my
       location? What should I do?
     </dt>
     <dd>
       Yes, it is possible that no facility near your place has published their
       vaccination program as yet. You may wait for some time till vaccination
-      facilities near your place are onboarded on Co-Win platform, become active
-      and start their services.
+      facilities near your place are onboarded on Cov-Aid platform, become
+      active and start their services.
     </dd>
   </dl>
 </div>
