--- a/src/app/registration-com/registration-com.component.html
+++ b/src/app/registration-com/registration-com.component.html
@@ -2,9 +2,8 @@
   <dl>
     <dt>1. Where can I register for COVID-19 vaccination?</dt>
     <dd>
-      You can log into the Co-WIN portal using the link www.cowin.gov.in and
-      click on the “Register/Sign In yourself” tab to register for COVID-19
-      vaccination
+      You can log into the Cov-Aid portal and click on the “Register” button to
+      register for COVID-19 vaccination.
     </dd>
 
     <dt>
@@ -12,13 +11,13 @@
       vaccination?
     </dt>
     <dd>
-      There is no authorised mobile app for registering for vaccination in India
-      except Aarogya Setu. You need to log into the Co-WIN portal.
-      Alternatively, you can also register for vaccination through the Aarogya
-      Setu App and Umang app.
+      There is no authorised mobile app for registering for vaccination in
+      India. You need to log into the Cov-Aid portal.
     </dd>
 
-    <dt>3. Which age groups can register for vaccination on the Co-WIN portal?</dt>
+    <dt>
+      3. Which age groups can register for vaccination on the Co-WIN portal?
+    </dt>
     <dd>All citizens aged 18 years and above can register for vaccination.</dd>
 
     <dt>4. Is online registration mandatory for Covid 19 vaccination?</dt>
@@ -27,41 +26,41 @@
       slots every day. Beneficiaries aged 45 years and above can schedule
       appointments online or walk-in to vaccination centres. Beneficiaries aged
       18 years and above can schedule appointments online or walk-in to
-      Government vaccination centres. However, beneficiaries aged 18-44 years
-      should mandatorily register themselves and schedule appointment online
-      before going to a Private vaccination centre. In general, all
-      beneficiaries are recommended to register online and schedule vaccination
-      in advance for a hassle-free vaccination experience.
+      vaccination centres. However, beneficiaries aged 18-44 years should
+      mandatorily register themselves and schedule appointment online before
+      going to a Private vaccination centre. In general, all beneficiaries are
+      recommended to register online and schedule vaccination in advance for a
+      hassle-free vaccination experience.
     </dd>
 
     <dt>
-      5. How many people can be registered in the Co-WIN portal through one mobile
-      number?
+      5. How many people can be registered in the Cov-Aid portal through one
+      E-mail ID?
     </dt>
     <dd>
-      Up to 4 people can be registered for vaccination using the same mobile
-      number.
+      Up to 4 people can be registered for vaccination using the same E-mail ID.
     </dd>
 
     <dt>
-      6. How can beneficiaries with no access to smart phones or computers manage
-      online registration?
+      6. How can beneficiaries with no access to smart phones or computers
+      manage online registration?
     </dt>
     <dd>
-      Up to 4 people can be registered for vaccination using the same mobile
-      number. Beneficiaries can take help from friends or family for online
+      Up to 4 people can be registered for vaccination using the same E-mail ID.
+      Beneficiaries can take help from friends or family for online
       registration.
     </dd>
 
     <dt>7. Can I register for vaccination without Aadhaar card?</dt>
     <dd>
-      Yes, you can register on Co-WIN portal using any of the following ID
+      Yes, you can register on Cov-Aid portal using any of the following ID
       proofs:
       <ul>
         <li>Aadhaar card</li>
         <li>Driving License</li>
         <li>Passport</li>
         <li>Voter ID (EPIC)</li>
+        <li>PAN card</li>
       </ul>
     </dd>
 
