--- a/src/app/scheduling-com/scheduling-com.component.html
+++ b/src/app/scheduling-com/scheduling-com.component.html
@@ -1,9 +1,9 @@
 <div class="scheduling-com">
   <dl>
-    <dt>9. Can I book an appointment for vaccination in the Co-WIN portal?</dt>
+    <dt>9. Can I book an appointment for vaccination in the Cov-Aid portal?</dt>
     <dd>
-      Yes, you can book appointment for vaccination through Co-WIN portal after
-      logging-in to the Co-WIN Portal through your registered mobile number.
+      Yes, you can book appointment for vaccination through Cov-Aid portal after
+      logging-in to the Cov-Aid Portal through your registered E-mail ID.
     </dd>
     <dt>
       10. What are the options if one citizen is aged 45 or above and other is
@@ -57,19 +57,19 @@
     </dt>
     <dd>
       Once an appointment is scheduled, you will receive the details of the
-      vaccination centre, date and time slot chosen for appointment in an SMS
-      sent to your registered mobile number. You can also download the
-      appointment slip and print it or keep it on your smart phone.
+      vaccination centre, date and time slot chosen for appointment in a mail
+      sent to your registered E-mail ID. You can also download the appointment
+      slip and print it or keep it on your smart phone.
     </dd>
     <dt>17. Can I get vaccination without appointment?</dt>
     <dd>
       Beneficiaries aged 45 years and above can schedule appointments online or
       walk-in to vaccination centres. Beneficiaries aged 18-44 years can
-      schedule appointment or walk-in for vaccination in Government vaccination
-      centre. However, they should mandatorily register themselves and schedule
+      schedule appointment or walk-in for vaccination in the vaccination centre.
+      However, they should mandatorily register themselves and schedule
       appointment online before vaccination in Private vaccination centres.
-      <br>However, all beneficiaries are recommended to register online and schedule
-      vaccination in advance for a hassle-free vaccination experience.
+      <br />However, all beneficiaries are recommended to register online and
+      schedule vaccination in advance for a hassle-free vaccination experience.
     </dd>
     <dt>
       18. When I click on vaccination centre it shows 'No appointments are
@@ -83,7 +83,7 @@
     </dd>
     <dt>
       19. What is the 4-digit secret code on the Account Details page of
-      self-registration portal on Co-WIN?
+      self-registration portal on Cov-Aid?
     </dt>
     <dd>
       At the time of vaccination, you may be asked for the 4-digit secret code.
