--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,9 +3,9 @@
   <p>Registered E-mail ID : <span class="email"> xxxxxx@gxx.com </span></p>
   <div class="account-details">
     <div class="name-details">
-      <h3>Sayanti Seal</h3>
+      <h4>Sayanti Seal</h4>
       <p>REF ID : 39126675206610</p>
-      <h5>Secret Code : 6610</h5>
+      <p>Secret Code : 6610</p>
     </div>
     <div class="id-details">
       <h4>Year of Birth: <span class="year">1998</span></h4>
