--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,22 +1,92 @@
 <div class="abovemainpart">
   <div class="mainpart">
-    <h2>Account Details</h2>
-    <p>Registered E-mail ID : <span class="email"> xxxxxx@gxx.com </span></p>
+    <h4>Account Details</h4>
+    <h4>Registered E-mail ID : <span class="email"> xxxxxx@gxx.com </span></h4>
     <div class="account-details">
       <div class="name-details">
-        <p>Sayanti Seal</p>
-        <p>REF ID : 39126675206610</p>
-        <p>Secret Code : 6610</p>
+        <h4 class="my-0">Sayanti Seal</h4>
+        <p class="my-0">REF ID : 39126675206610</p>
+        <p class="my-0">Secret Code : 6610</p>
       </div>
-      <div class="id-details">
-        <h4>Year of Birth: <span class="year">1998</span></h4>
-        <h4>Photo ID: <span class="photo-id"> Aadhaar Card</span></h4>
-        <h4>ID Number: <span class="id-no">XXXX-4118</span></h4>
+      <div class="id-details mt-2">
+        <h5>Year of Birth: <span class="year">1998</span></h5>
+        <h5>Photo ID: <span class="photo-id"> Aadhaar Card</span></h5>
+        <h5>ID Number: <span class="id-no">XXXX-4118</span></h5>
       </div>
       <div class="dose-details">
-        <h5>Appointment Not Schedule</h5>
+        <p>Appointment Not Schedule</p>
         <button class="btn btn-success">Schedule</button>
       </div>
+    </div>
+    <div class="note my-4">
+      <h5>Note</h5>
+      <p>
+        <span class="notecontent"
+          >One registration per person is sufficient. Please do not register
+          with multiple mobile numbers or different Photo ID Proofs for same
+          individual.</span
+        >
+        <span class="notecontent"
+          >Scheduling of Second dose should be done from the same account (same
+          mobile number) from which the first dose has been taken, for
+          generation of final certificate. Separate registration for second dose
+          is not necessary.</span
+        >
+        <span class="notecontent"
+          >Please carry the registered mobile phone and the requisite documents,
+          including appointment slip, the Photo ID card used for registration,
+          Employment Certificate (HCW/FLW) etc., while visiting the vaccination
+          center, for verification at the time of vaccination.</span
+        >
+        <span class="notecontent"
+          >Please check for additional eligibility conditions, if any,
+          prescribed by the respective State/UT Government for vaccination at
+          Government Vaccination Centers, for 18-44 age group, and carry the
+          other prescribed documents (e.g. Comorbidity Certificate etc.) as
+          suggested by respective State/UT (on their website).</span
+        >
+        <span class="notecontent"
+          >The slots availability is displayed in the search (on district,
+          pincode or map) based on the schedule populated by the DIOs (for
+          Government Vaccination Centers) and private hospitals for their
+          vaccination centers.</span
+        >
+        <span class="notecontent"
+          >The vaccination schedule published by DIOs and private hospitals
+          displays the list of vaccination centers with the following
+          information:</span
+        >
+      </p>
+
+      <ol type="i">
+        <li>The vaccine type.</li>
+        <li>The age group (18-44/45+ etc.).</li>
+        <li>The number of slots available for dose 1 and dose 2.</li>
+        <li>
+          Whether the service is Free or Paid (Vaccination is free of cost at
+          all the Government Vaccination Centers).
+        </li>
+        <li>Per dose price charged by a private hospital.</li>
+      </ol>
+
+      <p>
+        <span class="notecontent"
+          >If you are seeking 1st dose vaccination, the system will show you
+          only the available slots for dose 1. Similarly, if you are due for 2nd
+          dose, the system will show you the available slots for dose 2 after
+          the minimum period from the date of 1st dose vaccination has elapsed.
+        </span>
+        <span class="notecontent"
+          >Once a session has been published by the DIO/ private hospital, the
+          session now can not be cancelled. However, the session may be
+          rescheduled. In case you have booked an appointment in any such
+          vaccination session that is rescheduled for any reason, your
+          appointment will also be automatically rescheduled accordingly. You
+          will receive a confirmation SMS in this regard. On such rescheduling,
+          you would still have the option of cancelling or further rescheduling
+          such appointment.
+          </span>
+      </p>
     </div>
   </div>
 </div>
