--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,16 +1,14 @@
-.abovemainpart{
-  padding-top: 20px;
+.abovemainpart {
+  padding-top: 60px;
 }
 .mainpart {
   border: 1px solid rgb(184, 185, 184);
-  margin-left: 200px;
-  margin-right: 200px;
-  padding: 10px 30px 10px 10px;
-  border-radius: 5px;
-  padding-top: 10px;
+  margin: 0 200px 30px;
+  padding: 30px;
+  border-radius: 6px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-.mainpart h2{
+.mainpart .h3 {
   text-decoration-color: #012060;
 }
 .account-details {
@@ -20,6 +18,38 @@
   padding-bottom: 10px;
   border: 1px solid rgb(184, 185, 184);
   margin: auto;
-  border-radius: 5px;
+  border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.name-details {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.name-details p {
+  margin-left: 5px;
+  padding-left: 6px;
+  border-left: 1px solid rgb(78, 78, 78);
+  text-decoration: none;
+}
+.id-details {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.note {
+  background-color: #87e1e4;
+  border-top: 1px solid #707070;
+  padding: 20px 20px 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.class .notecontent {
+  text-align: left;
+  padding-top: 10px;
 }
