schedule page made

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="dose-details">
         <p>Appointment Not Schedule</p>
-        <button class="btn btn-success">Schedule</button>
+        <a routerLink="/schedule" class="btn btn-success">Schedule</a>
       </div>
     </div>
     <div class="note my-4">
