--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -12,12 +12,9 @@
   text-decoration-color: #012060;
 }
 .account-details {
-  padding-left: 25px;
-  padding-right: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 20px 25px;
   border: 1px solid rgb(184, 185, 184);
-  margin: auto;
+  margin: 30px 0;
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
