--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -1,6 +1,10 @@
 <div class="mainpart">
-  <a  routerLink="/dashboard" i class="fas fa-arrow-left"></a>
-  <h2>Book Appointment for Vaccination</h2>
+  <div class="head">
+    <button class="btn" (click)="backBtn()">
+      <i class="fas fa-arrow-left"></i>
+    </button>
+    <h2>Book Appointment for Vaccination</h2>
+  </div>
   <p>
     The slots availability data displayed in the pincode or district search is
     provided by the state govt and private hospitals. Cowin does not create this
