--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -101,3 +101,37 @@
     </div>
   </div>
 </div>
+
+<div class="report">
+  <h3>Report</h3>
+  <div class="vaccinated">
+    <div class="vaccination-report">
+      <i class="far fa-sticky-note"></i>
+      <div>
+        <h4>3034.86 + Lakh</h4>
+        <h5>Total Vaccination Doses</h5>
+      </div>
+    </div>
+    <div class="vaccination-report">
+      <i class="fas fa-male"></i>
+      <div>
+        <h4>1349.71 + Lakh</h4>
+        <h5>Total Vaccinated - Male</h5>
+      </div>
+    </div>
+    <div class="vaccination-report">
+      <i class="fas fa-female"></i>
+      <div>
+        <h4>1156.95 + Lakh</h4>
+        <h5>Total Vaccinated - FeMale</h5>
+      </div>
+    </div>
+    <div class="vaccination-report">
+      <i class="fab fa-pied-piper-pp"></i>
+      <div>
+        <h4>22591</h4>
+        <h5>AEFI Reported</h5>
+      </div>
+    </div>
+  </div>
+</div>
