--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -1,7 +1,9 @@
 <div class="mainpart">
   <div class="head">
     <button class="btn" (click)="backBtn()">
+      <!-- <a routerLink="/dashboard"> -->
       <i class="fas fa-arrow-left"></i>
+      <!-- </a> -->
     </button>
     <h2>Book Appointment for Vaccination</h2>
   </div>
