--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -105,32 +105,32 @@
 <div class="report">
   <h3>Report</h3>
   <div class="vaccinated">
-    <div class="vaccination-report">
+    <div class="vaccination-report blue">
       <i class="far fa-sticky-note"></i>
       <div>
         <h4>3034.86 + Lakh</h4>
-        <h5>Total Vaccination Doses</h5>
+        <p>Total Vaccination Doses</p>
       </div>
     </div>
-    <div class="vaccination-report">
+    <div class="vaccination-report brown">
       <i class="fas fa-male"></i>
       <div>
         <h4>1349.71 + Lakh</h4>
-        <h5>Total Vaccinated - Male</h5>
+        <p>Total Vaccinated - Male</p>
       </div>
     </div>
-    <div class="vaccination-report">
+    <div class="vaccination-report pink">
       <i class="fas fa-female"></i>
       <div>
         <h4>1156.95 + Lakh</h4>
-        <h5>Total Vaccinated - FeMale</h5>
+        <p>Total Vaccinated - FeMale</p>
       </div>
     </div>
-    <div class="vaccination-report">
+    <div class="vaccination-report green">
       <i class="fab fa-pied-piper-pp"></i>
       <div>
         <h4>22591</h4>
-        <h5>AEFI Reported</h5>
+        <p>AEFI Reported</p>
       </div>
     </div>
   </div>
