--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -191,3 +191,22 @@
 .green i {
   background-color: #56a638;
 }
+
+.lastpart {
+  background-color: #ffffff;
+  padding-top: 10px;
+}
+.lastpart h3 {
+  text-align: center;
+  padding-top: 10px;
+  text-decoration: underline;
+}
+.logopart {
+  display: flex;
+  justify-content: center;
+}
+.logo-inner {
+  display: flex;
+  margin: 20px 30px 10px;
+  align-items: center;
+}
