--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -135,3 +135,14 @@
     </div>
   </div>
 </div>
+<div class="lastpart">
+  <h3>Our Partners</h3>
+  <div class="logopart">
+    <div class="logo-inner">
+      <div>
+        <img src="../../assets/images/TIH.png" alt="" />
+        <img src="../../assets/images/makaut-logo.png" alt="" />
+      </div>
+    </div>
+  </div>
+</div>
