logo size adjusted and minor css change

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -140,8 +140,9 @@
   <div class="logopart">
     <div class="logo-inner">
       <div>
-        <img src="../../assets/images/TIH.png" alt="" />
-        <img src="../../assets/images/makaut-logo.png" alt="" />
+        <img src="../../assets/images/TIH.png" width="320" height="319" alt="" />
+        <img src="../../assets/images/virtualhands.png" width="220" height="255" alt="" />
+        <img src="../../assets/images/makaut-logo.png" width="295" height="300" alt="" />
       </div>
     </div>
   </div>
