--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -7,6 +7,7 @@
   background: #f4f7f8;
   border-radius: 8px;
   font-family: Georgia, "Times New Roman", Times, serif;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .form-style-5 fieldset {
   border: none;
@@ -71,16 +72,16 @@
   padding: 19px 39px 18px 39px;
   color: #fff;
   margin: 0 auto;
-  background: #1abc9c;
+  background: #5ddfe4;
   font-size: 18px;
   text-align: center;
   font-style: normal;
   width: 100%;
-  border: 1px solid #16a085;
+  border: 1px solid #5ddfe4;
   border-width: 1px 1px 3px;
   margin-bottom: 10px;
 }
 .form-style-5 input[type="submit"]:hover,
 .form-style-5 input[type="button"]:hover {
-  background: #109177;
+  background: #5ddfe4;
 }
